Fix custom icon visibility

--- a/style.css
+++ b/style.css
@@ -12173,6 +12173,7 @@ header .header-inner .il-logo img {
   display: table-cell;
   vertical-align: middle;
   outline: none;
+  background-position: center;
 }
 .btn-bulky.engaged,
 .btn-bulky:hover,
@@ -12883,8 +12884,6 @@ div.ilFrmPostAttachmentsContainer a.btn.btn-default:hover {
   display: none !important;
 }
 .ilrepositorygui .il_ContainerListItem .btn-group {
-  margin-right: 20px;
-  margin-top: 20px;
 }
 .ilrepositorygui .il_ContainerListItem .btn-group .open > .dropdown-toggle.btn-default {
   background-color: transparent !important;
@@ -13990,8 +13989,6 @@ h3.il_ContainerItemTitle {
 div.il_ContainerItemTitle {
   float: left;
   max-width: calc(100% - 50px);
-  padding-bottom: 15px;
-  padding-top: 15px;
   padding-left: 10px;
 }
 [dir="rtl"] div.il_ContainerItemTitle {
@@ -18109,12 +18106,12 @@ div.ilPreconditionItem {
 }
 div.ilContainerListItemOuter {
   padding: 20px;
-}
-/* Repository */
-div.ilContainerListItemOuter {
-  padding-bottom: 20px;
   zoom: 1;
-  /* background-color: lighten(@mid-gray, 75%); */
+  display: flex;
+  gap: 10px;
+  background: #f8f8f8;
+  margin: 10px 0;
+  border-radius: 5px;
 }
 [dir="rtl"] div.ilContainerListItemOuter {
   display: table;
@@ -18168,16 +18165,6 @@ div.ilContainerListItemCB {
 div.ilContainerListItemCB img {
   width: 20px;
 }
-[dir="rtl"] div.ilContainerListItemCB {
-  /* float: right; */
-}
-div.ilContainerListItemIcon {
-  /* margin-top: -3px;
-	   float: left;
-	position: absolute; */
-  display: none;
-  vertical-align: top;
-}
 div.ilContainerListItemIcon a {
   display: block;
   margin-top: -3px;
@@ -18199,7 +18186,6 @@ img.ilListItemIcon {
   max-width: none;
 }
 div.ilContainerListItemContent {
-  background-color: rgba(193, 193, 193, 0.12);
   border-radius: 5px;
   vertical-align: top;
   width: 100%;
@@ -18221,9 +18207,9 @@ div.ilContainerListItemContentCB {
 }
 div.il_ContainerListItem {
   margin: 2px 0;
-  padding-left: 8px;
+  padding-left: 0;
   width: 100%;
-  padding-bottom: 10px;
+  padding-bottom: 0;
 }
 [dir="rtl"] div.il_ContainerListItem {
   padding-left: 0;
